experiments with backported jpackager (not yet working)